--- a/src/styling/user.tailwind.css
+++ b/src/styling/user.tailwind.css
@@ -2,10 +2,12 @@
 
 .user-layout {
     @apply flex w-screen h-screen flex-col px-44;
+    
   }
   
   .user-content {
     @apply flex flex-col overflow-y-auto gap-7 py-7;
+    
   }
   
   .user-menu {
@@ -35,17 +37,48 @@
   }
   
   /* books layout */
-  .books {
+  .causes {
     @apply flex flex-wrap gap-4 m-[1px];
+    justify-content: center;
   }
   
   /* book card */
   
-  .book-card {
+  .cause-card {
     @apply p-6 rounded-3xl flex flex-col gap-3 min-w-[300px];
-    box-shadow: 0px 0px 2px #7b61ff;
+    width: 80%;
+    margin-bottom: 50px;
+    background-color: #DDEDDE;
+    box-shadow: 5px 10px 5px #999999;
+  }
+
+  .cause-progress {
+    width: 100%;
+    flex-direction: column;
+  
+  }
+
+  .progress-bar {
+    width: 60%;
   }
   
+  .target {
+    float: right;
+    margin-top: 10px;
+    font-weight: bold;
+  }
+  .cause-details {
+    flex-direction: row;
+  }
+
+  .cause-details-title {
+    @apply text-[28px] font-semibold text-white;
+  }
+
+  .cause-details-zone {
+    @apply text-[20px] font-semibold;
+  }
+
   .rented {
     box-shadow: 0px 0px 2px #999999;
   }
