--- a/src/styling/global.tailwind.css
+++ b/src/styling/global.tailwind.css
@@ -120,6 +120,15 @@ label {
   border-color:#28666E;
 }
 
+.textarea {
+  @apply w-full px-4 py-3 border-2 rounded-lg outline-none border-gray text-base font-semibold;
+  height: 300px;
+}
+
+.textarea:focus {
+  border-color:#28666E;
+}
+
 .text-details {
   @apply text-[20px] font-semibold;
   font-color:#28666E;
